rgw: improve scheduler log

when scheduling a dmclock requests
add to the log the scheduler type as configured
per "rgw_scheduler_type"

Fixes: https://tracker.ceph.com/issues/46332

Signed-off-by: Mark Kogan <mkogan@redhat.com>